Bug: Fixed missing list in order